crates/auto-lang/test/cookbook/errors/003_backtrace/backtrace.at
use.rust std::backtrace::Backtrace

fn main() {
    let bt = Backtrace.capture()
    assert(true)
}
